--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 
         compile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.3.1'
 
+        compile group: 'org.springframework', name: 'spring-test', version: '5.0.5.RELEASE'
+
         /* This is needed for demo only */
         compile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.3.1'
 
