--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,26 @@
-plugins {
-    id 'java'
+buildscript {
+    project.ext['CERN_VM'] = System.getProperty('CERN_TECHNET_VM') ?: System.getenv('CERN_TECHNET_VM') ?: System.getProperty('CERN_VM') ?: System.getenv('CERN_VM') ?: false
 }
 
-group 'org.molr'
-version '1.0-SNAPSHOT'
+apply plugin: 'java'
+apply plugin: 'jacoco'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
+
+group = "org.molr"
 
 repositories {
-    mavenCentral()
+    repositories {
+        if (project['CERN_VM']) {
+            maven { url 'http://artifactory.cern.ch/ds-jcenter' }
+            maven { url 'http://artifactory.cern.ch/development' }
+        } else {
+            mavenCentral()
+            jcenter()
+        }
+    }
 }
 
 dependencies {
@@ -24,10 +36,52 @@ dependencies {
 
         compile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.3.1'
 
-        compile group: 'org.springframework', name: 'spring-test', version: '5.0.5.RELEASE'
+        compile group: 'org.springframework', name: 'spring-test', version: '5.0.10.RELEASE'
 
         /* This is needed for demo only */
         compile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.3.1'
 
+        compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
     }
 }
+
+javadoc { options.encoding = "UTF-8" }
+
+if (!project.tasks.findByName("javadocJar")) {
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+        from javadoc
+    }
+}
+
+if (!project.tasks.findByName("sourcesJar")) {
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+}
+
+eclipse {
+    classpath {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        xml.destination new File("${buildDir}/reports/jacoco/report.xml")
+        html.enabled false
+        csv.enabled false
+    }
+}
+
+task wrapper(type: Wrapper) { gradleVersion = '4.10.2' }
