added bintry repo and config for travis

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
         } else {
             mavenCentral()
             jcenter()
+            maven { url "https://dl.bintray.com/molr/molr-repo" }
         }
     }
 }
