--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
         compile group: 'org.molr', name: 'molr-commons', version: molrVersion
 
         /* to be able to run the server */
-        compile group: 'org.molr', name: 'molr-agency-server', version: molrVersion
+        compile group: 'org.molr', name: 'molr-mole-server', version: molrVersion
 
         /* Note: This has to be available at runtime, as the Mole needs it to run junit tests */
         compile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
