--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 sudo: false
 jdk:
-- oraclejdk8
-- oraclejdk9
+- openjdk8
+- openjdk9
 before_install:
 - chmod +x ./gradlew
 script:
