--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
+dist: trusty
 language: java
-sudo: false
 jdk:
-- openjdk8
-- openjdk9
+- oraclejdk8
+- oraclejdk11
 before_install:
 - chmod +x ./gradlew
 script:
 - ./gradlew check -i
 - ./gradlew javadoc
 - ./gradlew jacocoTestReport
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: ./gradlew bintrayUpload -Ddeployment=true
+  on:
+    tags: true
+    jdk: oraclejdk8
 after_success:
 - bash <(curl -s https://codecov.io/bash)
