adding depoyment functionality

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,20 @@
 molrVersion=0.2.1
+
+# DEPLOYMENT PROPERTIES
+POM.groupId=io.molr
+POM.artifactId=molr-mole-junit5
+POM.description=Mole that can run junit5 tests.
+INFO.mainDeveloper=molr-developers
+INFO.mainDeveloperEmail=molr-developers@googlegroups.com
+INFO.organization=molr
+INFO.repo=https://github.com/molr/molr-mole-junit5.git
+INFO.url=https://molr.github.io/
+INFO.github=https://github.com/molr/molr-mole-junit5
+INFO.githubIssues=https://github.com/molr/molr-mole-junit5/issues
+INFO.licenseNameShort=Apache-2.0
+INFO.licenseName=The Apache License, Version 2.0
+INFO.licenseUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
+BINTRAY.repo=molr-repo
+BINTRAY.organization=molr
+BINTRAY.name=molr-mole-junit5
+# BINTRAY.name specified in each subproject
