--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 buildscript {
     project.ext['CERN_VM'] = System.getProperty('CERN_TECHNET_VM') ?: System.getenv('CERN_TECHNET_VM') ?: System.getProperty('CERN_VM') ?: System.getenv('CERN_VM') ?: false
+    project.ext['DEPLOYMENT'] = System.getProperty('deployment') ?: false
+    project.ext['VCS_TAG'] = System.getProperty('TRAVIS_TAG') ?: System.getenv('TRAVIS_TAG') ?: System.getProperty('VCS_TAG')
+
+    project.ext['BINTRAY.userName'] = System.getProperty('BINTRAY_USER') ?: System.getenv('BINTRAY_USER')
+    project.ext['BINTRAY.apiToken'] = System.getProperty('BINTRAY_API_TOKEN') ?: System.getenv('BINTRAY_API_TOKEN')
 }
 
 apply plugin: 'java'
@@ -85,4 +90,10 @@ jacocoTestReport {
     }
 }
 
-task wrapper(type: Wrapper) { gradleVersion = '4.10.2' }
+if (project['DEPLOYMENT']) {
+    println "Applying deployment scripts for ${project.name}"
+    apply from: '../gradle/bintray-deploy.gradle'
+}
+
+
+task wrapper(type: Wrapper) { gradleVersion = '4.10.3' }
